# TradingAgents

./: .env.exmaple  .gitignore  CLAUDE.md  GRADIO_README.md  PAGE_SWITCH_FIX_README.md  README.md  README_cn.md  STREAMLIT_FIX_README.md  analyze_refactoring.py  code_report.md  config_utils.py  error_handler.py  gradio_app.py  gradio_styles.css  gradio_utils.py  gui_app.py  gui_styles.py  gui_utils.py  launch_gradio.py  launch_gui.py  launch_streamlit.py  llm_provider.json.example  main.py  pyproject.toml  requirements.txt  results_formatter.py  simple_performance_test.py  streaming_handler.py  streamlit_app.py  streamlit_utils.py  test_concurrency.py  test_gui.py  todo-list.md  verify_config.py
cli/: main.py  utils.py
gui/: __init__.py  analysis_runner.py  config.py  report_formatter.py  state_manager.py  ui_components.py
gui/pages/: __init__.py  historical_analysis.py  new_analysis.py  system_status.py
tradingagents/: default_config.py
tradingagents/agents/analysts/: fundamentals_analyst.py  market_analyst.py  news_analyst.py  social_media_analyst.py
tradingagents/agents/managers/: research_manager.py  risk_manager.py
tradingagents/agents/trader/: trader.py
tradingagents/agents/utils/: memory.py
tradingagents/config/: data_validation.json  state_logging.json  technical_indicators.json
tradingagents/dataflows/: finnhub_utils.py  interface.py  stockstats_utils.py
tradingagents/graph/: trading_graph.py
